<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Clinica</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthday">Birthday</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="reg_login">Back to Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register">New User? Register</string>
    <string name="logout">Logout</string>
</resources>